deploy/kubernetes/base/platform-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-db
spec:
  ports:
    - name: postgres
      port: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: command-db-external
  labels:
    kubernetes.io/service-name: command-db
addressType: IPv4
ports:
  - name: postgres
    protocol: TCP
    port: 5433
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: query-db
spec:
  ports:
    - name: postgres
      port: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: query-db-external
  labels:
    kubernetes.io/service-name: query-db
addressType: IPv4
ports:
  - name: postgres
    protocol: TCP
    port: 5434
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
spec:
  ports:
    - name: postgres
      port: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: inventory-db-external
  labels:
    kubernetes.io/service-name: inventory-db
addressType: IPv4
ports:
  - name: postgres
    protocol: TCP
    port: 5435
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - name: kafka
      port: 9092
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kafka-external
  labels:
    kubernetes.io/service-name: kafka
addressType: IPv4
ports:
  - name: kafka
    protocol: TCP
    port: 9094
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
spec:
  ports:
    - name: kafka
      port: 9092
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kafka-2-external
  labels:
    kubernetes.io/service-name: kafka-2
addressType: IPv4
ports:
  - name: kafka
    protocol: TCP
    port: 9095
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-3
spec:
  ports:
    - name: kafka
      port: 9092
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kafka-3-external
  labels:
    kubernetes.io/service-name: kafka-3
addressType: IPv4
ports:
  - name: kafka
    protocol: TCP
    port: 9096
endpoints:
  - addresses: ["127.0.0.1"]
---
apiVersion: v1
kind: Service
metadata:
  name: debezium
spec:
  ports:
    - name: http
      port: 8083
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: debezium-external
  labels:
    kubernetes.io/service-name: debezium
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 8083
endpoints:
  - addresses: ["127.0.0.1"]
